--- a/src/assets/scss/modules/_modal.scss
+++ b/src/assets/scss/modules/_modal.scss
@@ -1,3 +1,15 @@
 .ant-modal {
-  width: 75% !important;
+  // width: 75% !important;
+}
+
+.ant-modal-confirm-content {
+  margin-left: 0 !important;
+}
+.ant-modal-confirm-btns {
+  .ant-btn-primary{
+    margin-left: 0 !important;
+  }
+}
+.ant-form-item {
+  margin-bottom: 5px !important;
 }
