--- a/src/assets/scss/pages/_add-class.scss
+++ b/src/assets/scss/pages/_add-class.scss
@@ -2,4 +2,7 @@
   @include pxRem(margin-top, 30);
   justify-content: space-around;
   align-items: center;
+  h3 {
+    color: map-get($colors, txt-hover);
+  }
 }
