--- a/src/assets/scss/modules/_form.scss
+++ b/src/assets/scss/modules/_form.scss
@@ -53,12 +53,10 @@ label {
   @include pxRem(margin-bottom, 5);
   display: block;
 }
-
 // Group form control
 .form-group {
   @include pxRem(margin-bottom, 20);
 }
-
 .login-form {
   @include pxRem(padding, 40);
   background-color: #efefef;
@@ -75,18 +73,18 @@ label {
   }
 }
 .form-add-class {
-  @include pxRem(margin, 20 auto);
+  @include pxRem(margin, 30 0 0 30);
   @include pxRem(padding, 20);
+  @include pxRem(max-width, 1024);
   border: 1px solid;
-  width: 85%;
   .ant-form-item-label {
     text-align: left;
   }
   &.tutor {
+    @include pxRem(margin, 30);
     width: 65%;
   }
 }
-
 .ant-checkbox-wrapper + .ant-checkbox-wrapper {
   margin-left: 0 !important;
 }
