--- a/src/assets/scss/pages/_class-detail.scss
+++ b/src/assets/scss/pages/_class-detail.scss
@@ -1,15 +1,20 @@
 .class-detail {
-  width: 60%;
+  width: 100%;
   justify-content: space-between;
-  .info {
-    box-shadow: 0 0.1px 12px 0 rgba(149, 208, 189, 0.6);
-    border-radius: 5px;
+  padding: 0 30px;
+  &-info {
+    margin-top: 10px;
+    box-shadow: 0 0.1px 12px 0 hwb(165deg 82% 17% / 60%);
+    border-radius: 2px;
+    gap: 30px;
+    padding: 10px 30px;
     p {
-      padding: 10px;
-      margin-left: 20px;
-    }
-    h4 {
-      text-align: center;
+      padding: 10px 0;
     }
   }
+}
+.support-info {
+  margin-top: -30px;
+  padding: 10px;
+  box-shadow: 0 0.1px 12px 0 hwb(165deg 82% 17% / 60%);
 }
