--- a/src/assets/scss/pages/_login.scss
+++ b/src/assets/scss/pages/_login.scss
@@ -1,9 +1,9 @@
 
 
 .page-main-login {
-  min-height: inherit;
+  min-height: 82.2vh;
   .container {
-    min-height: inherit;
+    min-height: 80vh;
     align-items: center;
     justify-content: center;
 
