--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -442,12 +442,7 @@ h6 {
   font-size: 1.25rem;
   color: wheat; }
   .icon-fav:hover {
-    font-size: 24px;
-    font-size: 1.5rem;
-    right: 18px;
-    right: 1.125rem;
-    bottom: 18px;
-    bottom: 1.125rem;
+    transform: scale(1.1);
     cursor: pointer;
     color: #f4b057; }
 
@@ -604,7 +599,8 @@ label {
   padding: 20px;
   padding: 1.25rem;
   max-width: 100%;
-  border: 1px solid; }
+  background-color: #fff;
+  border: 2px solid #e4e4e4; }
   .form-add-class .ant-form-item-label {
     text-align: left; }
   .form-add-class.tutor {
@@ -634,18 +630,23 @@ table {
   background-color: #e9eaec !important; }
 
 .ant-table-tbody > tr > td {
-  padding: 0px 10px !important;
-  padding: 0rem 0.625rem !important; }
+  padding: 0px 5px !important;
+  padding: 0rem 0.3125rem !important;
+  line-height: 0px !important; }
 
-.ant-table-tbody > tr:hover {
-  background-color: #e9eaec !important; }
+td.ant-table-cell-row-hover {
+  transition: 0.2s;
+  background-color: #f1f1f1 !important; }
 
 .ant-table-cell {
   text-align: center !important; }
   .ant-table-cell img {
     width: 100px;
     height: 100px;
-    object-fit: cover; }
+    object-fit: cover;
+    padding: 5px 0; }
+  .ant-table-cell::before {
+    height: 0 !important; }
 
 .tutor-detail {
   align-items: center; }
@@ -870,7 +871,7 @@ table {
   font-size: 22px;
   font-size: 1.375rem; }
 
-.header-left .brand-title p:hover {
+.header-left:hover {
   color: #d61523; }
 
 .header-right {
@@ -910,7 +911,7 @@ table {
 .page-main {
   padding: 0px 0px;
   padding: 0rem 0rem;
-  min-height: 85vh; }
+  min-height: 80vh; }
 
 .ant-breadcrumb {
   font-size: 16px;
@@ -997,7 +998,7 @@ a {
     color: #fff; }
 
 .panel-info {
-  --panel-item-height: 150px;
+  --panel-item-height: 140px;
   margin-top: calc(var(--panel-item-height)/2*(-1));
   position: relative; }
   .panel-info-list {
@@ -1011,9 +1012,13 @@ a {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    text-align: center; }
+    text-align: center;
+    transition: 0.3s linear; }
     .panel-info-item:hover {
       background-color: #d61523; }
+  .panel-info-title {
+    font-size: 18px;
+    padding: 10px 0; }
 
 .class-list {
   flex-wrap: wrap;
@@ -1025,12 +1030,13 @@ a {
     padding: 0.625rem;
     width: 31%;
     align-items: center;
-    box-shadow: 0 0.1px 12px 0 rgba(107, 182, 158, 0.668);
     border-radius: 5px;
+    border: 1px solid #e4e4e4;
     list-style-type: none;
-    position: relative; }
+    position: relative;
+    transition: 0.3s ease-in; }
     .class-list .class-item:hover {
-      box-shadow: 0 0.1px 12px 0 rgba(47, 145, 195, 0.668); }
+      box-shadow: 0 0.1px 12px 0 rgba(47, 146, 195, 0.341); }
     .class-list .class-item img {
       width: 100px;
       width: 6.25rem;
@@ -1082,26 +1088,38 @@ a {
       padding: 0.3125rem 0rem; }
 
 .class-detail {
+  padding: 0px 30px;
+  padding: 0rem 1.875rem;
   width: 100%;
-  justify-content: space-between;
-  padding: 0 30px; }
+  justify-content: space-between; }
   .class-detail-info {
     margin-top: 10px;
-    box-shadow: 0 0.1px 12px 0 hwb(165deg 82% 17%/60%);
-    border-radius: 2px;
+    margin-top: 0.625rem;
     gap: 30px;
-    padding: 10px 30px; }
+    gap: 1.875rem;
+    background-color: #fff;
+    border-radius: 2px;
+    border: 2px solid #e4e4e4; }
+    .class-detail-info:first-child {
+      border-right: none; }
+    .class-detail-info h4 {
+      text-align: center; }
     .class-detail-info p {
-      padding: 10px 0; }
+      height: 40px;
+      height: 2.5rem;
+      padding: 10px 30px;
+      padding: 0.625rem 1.875rem; }
+      .class-detail-info p:nth-of-type(2n) {
+        background-color: #f1f1f1; }
 
-.support-info {
-  padding: 10px;
-  box-shadow: 0 0.1px 12px 0 hwb(165deg 82% 17%/60%); }
+.banner-right {
+  padding-top: 10px;
+  padding-top: 0.625rem; }
 
 .page-main-login {
-  min-height: inherit; }
+  min-height: 82.2vh; }
   .page-main-login .container {
-    min-height: inherit;
+    min-height: 80vh;
     align-items: center;
     justify-content: center; }
 
