--- a/src/assets/scss/modules/_icons.scss
+++ b/src/assets/scss/modules/_icons.scss
@@ -4,9 +4,7 @@
   @include pxRem(font-size, 20);
   color: wheat;
   &:hover {
-    @include pxRem(font-size, 24);
-    @include pxRem(right, 18);
-    @include pxRem(bottom, 18);
+    transform: scale(1.1);
     cursor: pointer;
     color: rgb(244, 176, 87);
   }
