--- a/src/assets/scss/pages/_class-detail.scss
+++ b/src/assets/scss/pages/_class-detail.scss
@@ -1,19 +1,28 @@
 .class-detail {
+  @include pxRem(padding, 0 30);
   width: 100%;
   justify-content: space-between;
-  padding: 0 30px;
   &-info {
-    margin-top: 10px;
-    box-shadow: 0 0.1px 12px 0 hwb(165deg 82% 17% / 60%);
+    @include pxRem(margin-top, 10);
+    @include pxRem(gap, 30);
+    background-color: #fff;
     border-radius: 2px;
-    gap: 30px;
-    padding: 10px 30px;
+    border: 2px solid #e4e4e4;
+    &:first-child {
+      border-right: none;
+    }
+    h4 {
+      text-align: center;
+    }
     p {
-      padding: 10px 0;
+      @include pxRem(height, 40);
+      @include pxRem(padding, 10 30);
+      &:nth-of-type(2n) {
+        background-color: #f1f1f1;
+      }
     }
   }
 }
-.support-info {
-  padding: 10px;
-  box-shadow: 0 0.1px 12px 0 hwb(165deg 82% 17% / 60%);
+.banner-right {
+  @include pxRem(padding-top, 10);
 }
