--- a/src/assets/scss/pages/_class-detail.scss
+++ b/src/assets/scss/pages/_class-detail.scss
@@ -18,7 +18,7 @@
       @include pxRem(height, 40);
       @include pxRem(padding, 10 30);
       &:nth-of-type(2n) {
-        background-color: #f1f1f1;
+        background-color: #f1f1f1cf;
       }
     }
   }
