--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -649,12 +649,15 @@ td.ant-table-cell-row-hover {
     height: 0 !important; }
 
 .tutor-detail {
-  align-items: center; }
+  align-items: center;
+  border: 2px solid #e4e4e4;
+  border-radius: 3px;
+  padding: 10px 10px 5px 10px; }
   .tutor-detail img {
     width: 150px;
     height: 150px;
     object-fit: cover;
-    margin-right: 10px; }
+    margin-right: 20px; }
 
 .ant-modal-confirm-content {
   margin-left: 0 !important; }
