update favs list

--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -71,3 +71,7 @@
     display: block;
   }
 }
+.ant-dropdown-menu-item-only-child:hover {
+ background-color: rgb(213, 212, 212) !important;
+ transition: .3s ease-in;
+}
