--- a/src/assets/scss/layout/_footer.scss
+++ b/src/assets/scss/layout/_footer.scss
@@ -1,7 +1,35 @@
-.page-footer {
-  @include pxRem(padding, 10);
-  @include pxRem(line-height, 28);
-  background: map-get($colors, bg-blue-dark);
-  text-align: center;
-  color: map-get($colors, white);
+.page-footer{
+  position: relative;
+  .footer-info {
+    @include pxRem(padding, 10);
+    @include pxRem(line-height, 28);
+    background: map-get($colors, bg-blue-dark);
+    text-align: center;
+    color: map-get($colors, white);
+  }
+  .wave {
+    position:absolute;
+    top: -200px;
+    left: 0;
+    width: 100%;
+    height: 200px;
+    background: rebeccapurple url(https://www.freepnglogos.com/uploads/wave-png/cool-wave-shapes-clipart-picture-12.png) no-repeat;
+    background-size: 1400px 200px;
+    &#wave1 {
+      z-index: 1000;
+      opacity: 1;
+      bottom: 0;
+      animation: animationWave 4s linear infinite;
+    }
+  }
+  @keyframes animationWave {
+    0%
+    {
+      background-position-x:1400px;
+    }
+    100%
+    {
+      background-position-x:0px;
+    }
+  }
 }
