--- a/src/assets/scss/modules/_buttons.scss
+++ b/src/assets/scss/modules/_buttons.scss
@@ -1,46 +1,57 @@
 .btn {
-  @include pxRem(padding, 8 16);
-  @include pxRem(border-radius, 8);
-  @include pxRem(font-size, 18);
-  @include pxRem(height, 40);
-  background: map-get($colors, primary);
+  @include pxRem(padding, 10 25 8);
+  @include pxRem(border-radius, 3);
+  @include pxRem(font-size, 15);
+  background: #3f86c4;
   color: map-get($colors, white);
   line-height: 1;
   cursor: pointer;
-  transition: background 400ms ease;
-  border: 0;
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  &:hover {
-    background: map-get($colors, primary-dark);
-  }
+  transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+  border: 1px solid #3f86c4;
   &:focus {
     outline: none;
-  }
-  &.disabled,
-  &:disabled {
-    pointer-events: none;
-    color: map-get($colors, txt-disabled);
-    border-color: map-get($colors, txt-disabled);
-    background: map-get($colors, bg-gray-light);
   }
   &.none {
     background: none;
     border: none;
     color: map-get($colors, bg-blue-dark);
-    @include pxRem(padding, 0);
-
+    @include pxRem(padding, 10 0);
     &:hover {
-      color: map-get($colors, txt-hover);
+      color:#3b5794;
     }
   }
 }
 .login-submit {
-  text-align: center;
-  @include pxRem(margin-right, 20);
+  margin: 0 auto;
+  &:hover {
+    background-color: map-get($colors, white);
+    color: #3b5794;
+    border-color: inherit;
+  }
 }
-
+.btn-facebook, .btn-google {
+  border-radius: 15px;
+  color: map-get($colors, white);
+  &:hover {
+    border-color: inherit;
+  }
+}
+.btn-facebook {
+  background-color: #3b5794;
+  border-color:#3b5794 ;
+  &:hover {
+    background-color: map-get($colors, white);
+    color: #3b5794;
+  }
+}
+.btn-google {
+  background-color: #d2504c;
+  border-color:#d2504c;
+  &:hover {
+    background-color: map-get($colors, white);
+    color: #d2504c;
+  }
+}
 .ant-btn-primary {
   margin-left: 50%;
 }
