--- a/src/assets/scss/modules/_form.scss
+++ b/src/assets/scss/modules/_form.scss
@@ -1,4 +1,5 @@
 input[type="text"],
+input[type="email"],
 input[type="password"],
 input[type="tel"],
 input[type="number"],
@@ -13,6 +14,7 @@ textarea {
   display: block;
   -webkit-appearance: none;
   transition: border-color 0.4s, box-shadow 0.4s;
+  border-radius: 3px;
   &:focus {
     border-color: map-get($colors, action-blue);
     box-shadow: 0 0 0 1px map-get($colors, action-blue);
@@ -45,26 +47,33 @@ textarea {
   resize: vertical;
 }
 
-// Label
-label {
-  @include pxRem(margin-bottom, 5);
-  display: block;
-}
 // Group form control
 .form-group {
   @include pxRem(margin-bottom, 20);
 }
 .login-form {
   @include pxRem(padding, 40);
-  background-color: #efefef;
+  background-color: #3c8ad933;
   border-radius: 5px;
+  width: 85%;
   form {
+    margin: 0 auto;
+    div {
+      display: flex;
+      align-items: center;
+      position:relative;
+    }
     label {
-      @include pxRem(padding-top, 20);
+      position: absolute;
+      left: 12%;
+      z-index: 100;
     }
     input {
       @include pxRem(height, 25);
-      @include pxRem(padding, 15 10);
+      @include pxRem(padding, 18 10 15 25);
+      width: 80%;
+    }
+    .ant-btn-submit {
       width: 100%;
     }
   }
